tests/parser/parse-for.4.bad.error
error: Malformed for expression
  --> test:4:25
   |
 4 |  (define f (for x in iter))
   |                          ^ expected body
